--- a/_includes/boardroom/members-sidebar/header.html
+++ b/_includes/boardroom/members-sidebar/header.html
@@ -1,8 +1,18 @@
 <header class="boardroom-members-header">
-  <h2 class="boardroom-members-title">Members</h2>
-  <button class="boardroom-invite-member-btn" title="Invite Member" aria-label="Invite Member">
-    <span class="boardroom-invite-member-icon" aria-hidden="true">
-      <img src="/assets/svg/invite-member.svg" width="18" height="18" alt="Invite" class="boardroom-invite-member-img" />
-    </span>
-  </button>
+  <div class="boardroom-members-header-content">
+    <div class="boardroom-members-header-left">
+      <h2 class="boardroom-members-title">Members</h2>
+      <span class="boardroom-members-count" id="members-count">5 online</span>
+    </div>
+    <div class="boardroom-members-header-right">
+      <div class="boardroom-members-actions">
+        <button class="boardroom-members-action-btn" type="button" title="Filter Members" aria-label="Filter Members">
+          <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/funnel.svg" alt="Filter" width="16" height="16" />
+        </button>
+        <button class="boardroom-invite-member-btn" type="button" title="Invite Member" aria-label="Invite Member">
+          <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/person-plus.svg" alt="Invite" width="16" height="16" />
+        </button>
+      </div>
+    </div>
+  </div>
 </header>
