--- a/_includes/boardroom/members-sidebar/search-form.html
+++ b/_includes/boardroom/members-sidebar/search-form.html
@@ -1,6 +1,24 @@
-<form class="boardroom-members-search-form" role="search" aria-label="Search Members">
-  <input type="search" class="boardroom-members-search-input" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-  <span class="boardroom-members-search-addon" id="search-addon">
-    <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/search.svg" alt="Search" width="16" height="16" class="boardroom-members-search-icon" />
-  </span>
-</form>
+<div class="boardroom-members-search-container">
+  <form class="boardroom-members-search-form" role="search" aria-label="Search Members">
+    <div class="boardroom-members-search-input-container">
+      <input type="search" class="boardroom-members-search-input" id="members-search-input" placeholder="Search members..." aria-label="Search members" aria-describedby="search-addon" />
+      <button type="button" class="boardroom-members-search-clear-btn" id="search-clear-btn" title="Clear search" aria-label="Clear search">
+        <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/x.svg" alt="Clear" width="14" height="14" />
+      </button>
+      <span class="boardroom-members-search-addon" id="search-addon">
+        <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/search.svg" alt="Search" width="16" height="16" class="boardroom-members-search-icon" />
+      </span>
+    </div>
+  </form>
+  <div class="boardroom-members-filters">
+    <button class="boardroom-members-filter-btn active" type="button" data-filter="all" title="Show all members">
+      All
+    </button>
+    <button class="boardroom-members-filter-btn" type="button" data-filter="online" title="Show online members">
+      Online
+    </button>
+    <button class="boardroom-members-filter-btn" type="button" data-filter="away" title="Show away members">
+      Away
+    </button>
+  </div>
+</div>
