--- a/_sass/components/boardroom/_main.scss
+++ b/_sass/components/boardroom/_main.scss
@@ -4,6 +4,7 @@
 // Import component partials
 @import 'toggle-strip';
 @import 'icon-white';
+@import 'ui-enhancements';
 
 // Members sidebar components
 @import 'members-sidebar/main';
