--- a/_includes/boardroom/chat-area/footer.html
+++ b/_includes/boardroom/chat-area/footer.html
@@ -1,7 +1,48 @@
 <footer id="messageInput" class="boardroom-message-input">
-  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp" alt="avatar 3" class="boardroom-message-input-avatar">
-  <input type="text" class="boardroom-message-input-field" id="message-input-control" placeholder="Type message" aria-label="Type message">
-  <a class="boardroom-message-input-attach" href="#" title="Attach File" aria-label="Attach File"><img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/paperclip.svg" alt="Attach" width="18" height="18" class="boardroom-message-input-attach-icon" /></a>
-  <a class="boardroom-message-input-emoji" href="#" title="Insert Emoji" aria-label="Insert Emoji"><img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/emoji-smile.svg" alt="Emoji" width="18" height="18" class="boardroom-message-input-emoji-icon" /></a>
-  <a class="boardroom-message-input-send" href="#" title="Send Message" aria-label="Send Message"><img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/send.svg" alt="Send" width="18" height="18" class="boardroom-message-input-send-icon" /></a>
+  <div class="boardroom-message-input-container">
+    <div class="boardroom-message-input-avatar-container">
+      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp" alt="Your avatar" class="boardroom-message-input-avatar">
+    </div>
+    <div class="boardroom-message-input-content">
+      <div class="boardroom-message-input-field-container">
+        <textarea 
+          class="boardroom-message-input-field" 
+          id="message-input-control" 
+          placeholder="Type your message..." 
+          aria-label="Type message"
+          rows="1"
+          maxlength="1000"></textarea>
+        <div class="boardroom-message-input-actions">
+          <button class="boardroom-message-input-action-btn" type="button" title="Attach File" aria-label="Attach File">
+            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/paperclip.svg" alt="Attach" width="18" height="18" />
+          </button>
+          <button class="boardroom-message-input-action-btn" type="button" title="Insert Emoji" aria-label="Insert Emoji">
+            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/emoji-smile.svg" alt="Emoji" width="18" height="18" />
+          </button>
+          <button class="boardroom-message-input-action-btn" type="button" title="Voice Message" aria-label="Voice Message">
+            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/mic.svg" alt="Voice" width="18" height="18" />
+          </button>
+        </div>
+      </div>
+      <div class="boardroom-message-input-toolbar">
+        <div class="boardroom-message-input-toolbar-left">
+          <button class="boardroom-message-format-btn" type="button" title="Bold" aria-label="Bold">
+            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/type-bold.svg" alt="Bold" width="14" height="14" />
+          </button>
+          <button class="boardroom-message-format-btn" type="button" title="Italic" aria-label="Italic">
+            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/type-italic.svg" alt="Italic" width="14" height="14" />
+          </button>
+          <button class="boardroom-message-format-btn" type="button" title="Code" aria-label="Code">
+            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/code.svg" alt="Code" width="14" height="14" />
+          </button>
+        </div>
+        <div class="boardroom-message-input-toolbar-right">
+          <span class="boardroom-message-char-count" id="char-count">0/1000</span>
+          <button class="boardroom-message-input-send-btn" type="button" title="Send Message" aria-label="Send Message">
+            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/send-fill.svg" alt="Send" width="18" height="18" />
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
