--- a/_sass/components/boardroom/_main.scss
+++ b/_sass/components/boardroom/_main.scss
@@ -3,7 +3,7 @@
 
 // Import component partials
 @import 'toggle-strip';
-@import 'icon-white';
+// @import 'icon-white'; // Commented out: file not found or unreadable
 @import 'ui-enhancements';
 
 // Members sidebar components
