--- a/_sass/components/boardroom/_main.scss
+++ b/_sass/components/boardroom/_main.scss
@@ -45,6 +45,10 @@
   @extend .gx-0;
   min-height: 70vh;
   align-items: stretch;
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+  max-width: 100%;
 }
 
 
