--- a/_sass/components/boardroom/chat-area/_main.scss
+++ b/_sass/components/boardroom/chat-area/_main.scss
@@ -8,7 +8,7 @@
   @extend .flex-grow-1;
   @extend .overflow-auto;
   min-height: 100vh;
-  min-width: 100%;
+  width: 100%;
   background: $body-bg;
 }
 
