--- a/_sass/components/boardroom/members-sidebar/_members.scss
+++ b/_sass/components/boardroom/members-sidebar/_members.scss
@@ -1,12 +1,11 @@
 // SCSS partial for boardroom members component
 
 #members {
-  @extend .w-100;
-  @extend .h-100;
-  @extend .min-vh-100;
-  @extend .min-vw-100;
   @extend .flex-grow-1;
   @extend .d-flex;
   @extend .flex-column;
   @extend .p-0;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
 }
