--- a/_sass/components/_boardroom.scss
+++ b/_sass/components/_boardroom.scss
@@ -1,3 +1,3 @@
-@import "toggle-strip";
-@import "chat-area";
-@import "members-sidebar";
+@use "toggle-strip";
+@use "chat-area";
+@use "members-sidebar";
