--- a/_sass/components/_boardroom.scss
+++ b/_sass/components/_boardroom.scss
@@ -1,3 +1,3 @@
-@use "toggle-strip";
-@use "chat-area";
-@use "members-sidebar";
+@import "toggle-strip";
+@import "chat-area";
+@import "members-sidebar";
