--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -2,10 +2,10 @@
 // This file contains only @extend, @include, or Bootstrap utility classes per project rules.
 // All custom property declarations must be in the unique class for each element/component.
 
-@use "../../common.asisaga.com/_sass/base/variables" as *;
-@use "../../common.asisaga.com/_sass/base/mixins" as *;
-@use "../../common.asisaga.com/_sass/base/typography" as *;
-@use "../../common.asisaga.com/_sass/base/utilities" as *;
+@import "../../common.asisaga.com/_sass/base/variables" as *;
+@import "../../common.asisaga.com/_sass/base/mixins" as *;
+@import "../../common.asisaga.com/_sass/base/typography" as *;
+@import "../../common.asisaga.com/_sass/base/utilities" as *;
 
 // Boardroom page root
 .boardroom-container {
