--- a/_sass/components/boardroom/_main.scss
+++ b/_sass/components/boardroom/_main.scss
@@ -73,6 +73,17 @@
   .boardroom-toggle-collapse-btn {
     margin-left: auto;
   }
+
+  // Make members-sidebar take full width on mobile
+  .boardroom-members-sidebar {
+    width: 100% !important;
+    max-width: 100vw;
+    min-width: 0;
+    flex: 0 0 100%;
+    border-right: none;
+    border-bottom: 1px solid #e9ecef;
+    box-sizing: border-box;
+  }
 }
 
 // Boardroom main row: three-column layout
