--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,2 +1,3 @@
+// Boardroom UI: Main entry point for all boardroom-related styles
 @import "components/boardroom/main";
 @import "pages/boardroom";
