--- a/_includes/boardroom/index.html
+++ b/_includes/boardroom/index.html
@@ -7,9 +7,9 @@ title: "Boardroom | Business Infinity"
   <section class="boardroom-section" aria-label="Boardroom Interface">
     <div class="boardroom-container-fluid">
       <div class="boardroom-main-row">
-        {% include boardroom/toggle-strip.html %}
-        {% include boardroom/members-sidebar.html %}
-        {% include boardroom/chat-area.html %}
+        {% include toggle-strip.html %}
+        {% include members-sidebar.html %}
+        {% include chat-area.html %}
       </div>
     </div>
   </section>
