--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,3 +1,6 @@
 // Boardroom UI: Main entry point for all boardroom-related styles
 @import "components/boardroom/main";
+
 @import "pages/boardroom";
+@import "pages/business-infinity";
+@import "pages/entrepreneur";
