--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -4,3 +4,6 @@
 @import "pages/boardroom";
 @import "pages/business-infinity";
 @import "pages/entrepreneur";
+@import "pages/privacy-policy";
+@import "pages/startup";
+
