--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -7,3 +7,6 @@
 @import "pages/privacy-policy";
 @import "pages/startup";
 
+@import "components/chat";
+@import "components/profiles";
+@import "components/mentor";
