--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -7,6 +7,6 @@
 @import "pages/privacy-policy";
 @import "pages/startup";
 
-@import "components/chat";
-@import "components/profiles";
-@import "components/mentor";
+@import "pages/chat";
+@import "pages/profiles";
+@import "pages/mentor";
